Closed Bug 1102665 Opened 10 years ago Closed 10 years ago

Stream video frame invalidation can get out of sync with other stream events

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: pehrsons, Assigned: pehrsons)

References

Details

Attachments

(1 file)

See bug 879717 for when this could happen.

In short, a stream could play out all video frames before we switch over to the main thread to handle them, if we are on a slow single core device for instance.
When we later switch over to the main thread, all the StreamListener runnables will be run first, then all the frame invalidations - causing a media element to end up in an unexpected state if said state depends on the arrival of a video frame.
Blocks: 879717
This is identical to attachment 8520607 [details] [diff] [review] (but rebased) which has r=roc on bug 879717.

This fix is orthogonal to the main changes in 879717 which are blocked on another bug.
Assignee: nobody → pehrsons
Status: NEW → ASSIGNED
Attachment #8526498 - Flags: review+
https://hg.mozilla.org/mozilla-central/rev/58bdcf852b1c
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.