Bug 1102665 - Invalidate stream video frames in the regular stream state event queue. r=roc